--- a/css/inscription.css
+++ b/css/inscription.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bokor&display=swap");
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   background-color: #1c1c1c;
@@ -9,89 +10,89 @@ body, html {
 
 /********************************************************** Styles du formulaire *****************************************************************/
 .card {
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 30px;
 }
 
 .card-header {
-    background-color: #f70776;
-    color: white;
-    font-size: 24px;
-    text-align: center;
-    padding: 10px;
+  background-color: #f70776;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  padding: 10px;
 }
 
 .btn-cta {
-    background-color: #f70776;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100%;
-    font-size: 16px;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+  background-color: #f70776;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .btn-cta:hover {
-    background-color: #c7005b;
-    transform: scale(1.05);
+  background-color: #c7005b;
+  transform: scale(1.05);
 }
 
 .form-control {
-    border-radius: 5px;
-    margin-bottom: 15px;
+  border-radius: 5px;
+  margin-bottom: 15px;
 }
 
 .container {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .link {
-    color: #f70776;
-    text-decoration: none;
-    font-size: 14px;
+  color: #f70776;
+  text-decoration: none;
+  font-size: 14px;
 }
 
 .link:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .form-footer {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .form-footer a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .navbar {
-    background-color: #ffffffc8;
+  background-color: #ffffffc8;
 }
 
 .nav-link {
-    font-size: 20px;
-    color: black;
+  font-size: 20px;
+  color: black;
 }
 
 .nav-link:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline #f70776 2px;
+  color: rgb(0, 0, 0);
+  text-decoration: underline #f70776 2px;
 }
 
 /* Responsive design */
 @media (max-width: 767px) {
-    .container {
-        margin-top: 20px;
-    }
+  .container {
+    margin-top: 20px;
+  }
 
-    .form-control {
-        font-size: 14px;
-    }
+  .form-control {
+    font-size: 14px;
+  }
 
-    .btn-cta {
-        font-size: 14px;
-    }
+  .btn-cta {
+    font-size: 14px;
+  }
 }
